# cft_internship

./: README.md  pyproject.toml
cft_internship/: main.py
