[tool.poetry]
name = "cft-internship"
version = "0.1.0"
description = ""
authors = ["miyazaki1707 <miyazaki1707@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.3"}
uvicorn = "0.19.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
